[project]
name = "auditry"
version = "0.1.0"
description = "FastAPI middleware for request/response logging, correlation IDs, and sensitive data redaction"
authors = [
    {name = "Liv Stark", email = "livstark.work@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["fastapi", "observability", "logging", "middleware", "correlation-id", "redaction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]

dependencies = [
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "structlog>=23.0.0",
    "asgi-correlation-id>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/lst4rk/auditry"
Repository = "https://github.com/lst4rk/auditry"
Issues = "https://github.com/lst4rk/auditry/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["auditry"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
auditry = ["py.typed"]